# mcp-gemini-server

./: .env.example  .gitignore  .secretlintignore  Cargo.toml  README.ja.md  README.md  install_claude_plugin.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml  secret-scan.yml
agents/: README.md
plugins/mcp-gemini/: .mcp.json
plugins/mcp-gemini-server/: .mcp.json
plugins/mcp-gemini-server/.claude-plugin/: plugin.json
skills/gemini-team/: patterns.md
src/: constants.rs  constants.ts  index.ts  main.rs  schemas.rs  server.rs  server.ts
src/schemas/: helpers.ts
src/server/: http.ts  upload.ts
src/services/: gemini_client.rs  gemini_client.ts  gemini_files.rs  gemini_files.ts  mod.rs  types.rs  upload_store.ts
src/tools/: analyze_media.rs  analyze_media.ts  custom_agent.rs  custom_agent.ts  execute_code.rs  execute_code.ts  gemini_chat.rs  gemini_chat.ts  generate_image.rs  generate_image.ts  google_search.rs  google_search.ts  manage_files.rs  manage_files.ts  mod.rs  registry.ts  team.rs  team.ts
src/utils/: config_file.rs  config_file.ts  diagnostics.rs  diagnostics.ts  env.rs  env.ts  errors.rs  errors.ts  logger.rs  logger.ts  mod.rs  telemetry.rs  telemetry.ts  transport.ts
tests/: smoke.test.ts
tests/unit/: abortable_timeout.test.ts  chat_file_input.test.ts  config_file.test.ts  diagnostics.test.ts  generate_image.test.ts  team.test.ts  thinking_config.test.ts  tool_defaults.test.ts
(+16 files in other folders)
